deployment/stag/deployment.yaml
# this for dep-stag
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatau-dep-stag
spec:
  selector:
    matchLabels:
      app: gatau
  replicas: 1
  template:
    metadata:
      labels:
        app: gatau
    spec:
      containers:
      - name: name
        image: riskiwah/gatau:eb51200e5ed36fd238f900004e3c84588a440028
        imagePullPolicy: Always
        ports:
            - containerPort: 8080
              name: http
